--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@node-redis/json": "^1.0.2",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
@@ -17,7 +18,6 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-async-handler": "^1.2.0",
-    "express-redis-cache": "^1.1.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.2.1",
     "redis": "^4.7.0"
